--- a/CalendarMobile/app/src/main/res/layout/activity_main.xml
+++ b/CalendarMobile/app/src/main/res/layout/activity_main.xml
@@ -431,7 +431,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <Button
-        android:id="@+id/getEvent"
+        android:id="@+id/viewEvent"
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginEnd="16dp"
@@ -439,6 +439,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="4dp"
+        android:onClick="viewEvent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
