--- a/CalendarMobile/app/src/main/res/layout/activity_show_events.xml
+++ b/CalendarMobile/app/src/main/res/layout/activity_show_events.xml
@@ -6,4 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".DayViewActivity">
 
+    <ScrollView
+        android:id="@+id/showEventsScrollView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="parent">
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
